--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@next/font": "13.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "lint": "^0.8.19",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
