--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "js-cookie": "^3.0.1",
     "lint": "^0.8.19",
     "next": "13.0.7",
     "react": "18.2.0",
