--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@next/font": "13.0.7",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "js-cookie": "^3.0.1",
     "lint": "^0.8.19",
+    "mongoose": "^6.8.3",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
